--- a/src/components/listProyects.module.css
+++ b/src/components/listProyects.module.css
@@ -1,19 +1,21 @@
-.container{
+.container {
   position: relative;
-  display: flex;
-  flex-direction: column;
   height: max-content;
   min-height: 500px;
-  margin-top: 100px;
+  
 }
-.lineTop{
+.listProyects{
+margin: auto;
+max-width: 1100px;
+}
+
+.lineTop {
   height: 10px;
   width: 60%;
   border-radius: 10px;
   background-color: black;
-  position: absolute;
-  top: -20px;
   left: 0;
+  margin: 30px 0 20px 0;
 }
 .lineBottom {
   height: 10px;
@@ -21,6 +23,5 @@
   border-radius: 10px;
   background-color: black;
   position: absolute;
-  bottom: 0px;
   right: 0;
 }
