--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 40px;
+  margin: 0 2%;
 }
 .title {
   font-size: 5rem;
