--- a/src/components/listProyects.module.css
+++ b/src/components/listProyects.module.css
@@ -1,27 +1,29 @@
 .container {
   position: relative;
-  height: max-content;
-  min-height: 500px;
+  overflow: hidden;
   
 }
 .listProyects{
-margin: auto;
-max-width: 1100px;
+  margin: 30px 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+  grid-gap: 10px;
+  grid-template-rows: auto;
 }
 
 .lineTop {
-  height: 10px;
+  height: 5px;
   width: 60%;
   border-radius: 10px;
-  background-color: black;
+  background-color: #555;
   left: 0;
   margin: 30px 0 20px 0;
 }
 .lineBottom {
-  height: 10px;
+  height: 5px;
   width: 60%;
   border-radius: 10px;
-  background-color: black;
+  background-color: #555;
   position: absolute;
   right: 0;
 }
