--- a/src/components/proyect.module.css
+++ b/src/components/proyect.module.css
@@ -1,50 +1,43 @@
 .container {
   position: relative;
-  display: flex;
-  width: 100%;
   margin: 10px 10px;
 }
 
 .title {
   margin: 0;
-  min-width: max-content;
-  font-size: 1.5rem;
+  text-align: center;
+  font-size: 1.8rem;
 }
 .features {
-  display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
+  display: flex; 
+  border: 2px solid #000;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .descriptionContainer {
+  height: 120px;
   display: flex;
-  flex-grow: 1;
-  width: 50%;
-  flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+
 }
 .description {
-  padding: 0 0 0 40px;
+  color: #666;
   text-align: justify;
 }
 .buttonContainer {
-  align-self: flex-end;
+  display: flex;
 }
 .button {
-  border: 1px solid rgb(37, 37, 37);
-  border-radius: 5px;
-  text-align: center;
-  width: 90px;
-  margin: 10px;
-  padding: 5px;
+  font-size: 17px;
+  padding: 0 10px;
   cursor: pointer;
-  background-color: #3f3f3f;
-  color: white;
-  transition: transform linear .1s, background-color linear .1s, color linear .1s;
+  color: #000;
+  transition: transform linear .1s;
 }
 .button:hover{
-  color: #000;
-  background-color: #e7e7e7;
   transform: scale(1.1);
+  color: #000;
 }
 .buttonText {
   margin: 0;
@@ -52,10 +45,8 @@
 .sliderContainer {
   position: relative;
   display: flex;
-  min-height: 300px;
-  height: 100%;
-  max-height: 400px;
-  width: 50%;
+  height: 300px;
+  width: 90%;
   max-width: 500px;
   align-self: center;
   justify-content: center;
@@ -70,11 +61,11 @@
   cursor: grab;
   position: absolute;
   width: 80%;
-  height: 80%;
+  height: 90%;
   background: white;
   overflow: hidden;
   border-radius: 5px;
-  filter: drop-shadow(3px 3px 2px #0006);
+  filter: drop-shadow(2px 2px 4px #0007);
 }
 
 .img {
