--- a/src/components/wave.module.css
+++ b/src/components/wave.module.css
@@ -14,10 +14,10 @@
   left: 0;
   height: 100%;
   width: 5000px;
-  background-image: url('../assets/images/background/wave.png');
+  background-image: url('../assets/images/background/wave.webp');
   background-repeat: repeat-x;
   background-position: bottom;
-  animation: wave1 10s linear infinite;
+  animation: wave1 15s linear infinite;
 }
 
 .wave2 {
@@ -25,10 +25,10 @@
   opacity: 0.5;
   height: 100%;
   width: 5000px;
-  background-image: url('../assets/images/background/wave.png');
+  background-image: url('../assets/images/background/wave.webp');
   background-position: bottom;
   background-repeat: repeat-x;
-  animation: wave1 10s linear -0.15s infinite, wave2 10s ease -0.125s infinite;
+  animation: wave1 15s linear -0.15s infinite, wave2 15s ease -0.125s infinite;
 }
 
 @keyframes wave1 {
